(DAY 3 MVP and stretch: login stuff) : fixed z-index issue

--- a/instagram/src/components/PostContainer/PostsPage.css
+++ b/instagram/src/components/PostContainer/PostsPage.css
@@ -1,10 +1,11 @@
 .staticbar {
   position: fixed;
+  height: 80px;
+  z-index: 5;
 }
 
 .postcontainer-wrapper {
   position: relative;
   top: 100px;
-  z-index: -1000;
 
 }
